force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/fields/clofor_com_cfs__AnnaulTarget__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AnnaulTarget__c</fullName>
    <label>ANNUAL TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>