force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/fields/clofor_com_cfs__AnnualTargetEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AnnualTargetEndDate__c</fullName>
    <label>ANNUAL TARGET END DATE</label>
    <type>Date</type>
</CustomField>