force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/fields/clofor_com_cfs__AnnualTargetFromIndividuals__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AnnualTargetFromIndividuals__c</fullName>
    <label>ANNUAL TARGET FROM INDIVIDUALS</label>
    <summarizedField>clofor_com_cfs__IndividualTarget__c.clofor_com_cfs__AnnaulTarget__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__IndividualTarget__c.clofor_com_cfs__OrganizationTargetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>