force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/fields/clofor_com_cfs__KPICategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KPICategory__c</fullName>
    <label>KPI CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__KPICategory</valueSetName>
    </valueSet>
</CustomField>