force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/fields/clofor_com_cfs__KPIID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KPIID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI ID</label>
    <referenceTo>clofor_com_cfs__KPI__c</referenceTo>
    <relationshipLabel>ORGANIZATION TARGET</relationshipLabel>
    <relationshipName>OrganizationTarget</relationshipName>
    <type>Lookup</type>
</CustomField>