force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/fields/clofor_com_cfs__NumberOfIndividualForAllocation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberOfIndividualForAllocation__c</fullName>
    <label>NUMBER OF INDIVIDUALS FOR ALLOCATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>