force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/fields/clofor_com_cfs__NumberOfStaffsFromIndividuals__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberOfStaffsFromIndividuals__c</fullName>
    <label>TOTAL NUMBER OF INDIVIDUALS</label>
    <summaryForeignKey>clofor_com_cfs__IndividualTarget__c.clofor_com_cfs__OrganizationTargetID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>