force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/fields/clofor_com_cfs__TargetAllocationToIndividual__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TargetAllocationToIndividual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TARGET ALLOCATION TO INDIVIDUAL</label>
    <type>Checkbox</type>
</CustomField>