force-app/main/default/objects/clofor_com_cfs__OrganizationTarget__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__OrganizationTargetName__c</columns>
    <columns>clofor_com_cfs__ParentOrganizationTargetID__c</columns>
    <columns>clofor_com_cfs__HierarchyLevel__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__KPIID__c</columns>
    <columns>clofor_com_cfs__KPIName__c</columns>
    <columns>clofor_com_cfs__AnnaulTarget__c</columns>
    <columns>clofor_com_cfs__MonthlyTarget__c</columns>
    <columns>clofor_com_cfs__PerformanceMeasurementUnit__c</columns>
    <columns>clofor_com_cfs__AnnualTargetStartDate__c</columns>
    <columns>clofor_com_cfs__AnnualTargetEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>